:bug: fix: revert width in plpProductBox on mobile

--- a/app/modules/plp/plpProductBox/styles.css
+++ b/app/modules/plp/plpProductBox/styles.css
@@ -273,7 +273,7 @@
 */
 @media only screen and (max-width: 550px) {
   .plpWrapperProductBox .plpProductBoxcontainer {
-    width: 100%;
+    width: 175px;
   }
   .plpWrapperProductBox .plpProductBoxcontainer .imageContainer {
     width: auto !important;
